Intro: Fixed text break in Safari

--- a/static/sass/app/intro/_intro.scss
+++ b/static/sass/app/intro/_intro.scss
@@ -200,6 +200,10 @@
       }
     }
 
+    li {
+      break-inside: avoid;
+    }
+
     a {
       opacity: .8;
       color: $white;
